Add navigation functionality and SummaryActivity
- Updated MainActivity to include navigation components and setup.
- Added SummaryActivity to the AndroidManifest with appropriate attributes.
- Introduced navigation buttons in activity_main layout for navigation between Home, Details, and Settings.
- Updated strings.xml with navigation labels and content for new activities and fragments.
- Added navigation dependencies in build.gradle.kts.
- Modified deploymentTargetSelector.xml to include MainActivity in selection states.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.screen.activity.SummaryActivity"
+            android:exported="false"
+            android:label="@string/summary_page_title"
+            android:theme="@style/Theme.Lecom" />
         
     </application>
 
