--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,38 @@
 [versions]
+accompanistSystemuicontroller = "0.36.0"
 agp = "8.13.1"
-kotlin = "2.0.21"
-coreKtx = "1.10.1"
+coilCompose = "2.7.0"
+kotlin = "2.2.21"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-appcompat = "1.6.1"
-material = "1.10.0"
-retrofit = "2.9.0"
-okhttp = "4.12.0"
-gson = "2.10.1"
-coroutines = "1.7.3"
-lifecycle = "2.7.0"
-navigation = "2.7.7"
-compose = "1.5.14"
-compose-bom = "2024.02.00"
-activity-compose = "1.8.2"
-material3 = "1.4.0"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+appcompat = "1.7.1"
+material = "1.13.0"
+retrofit = "3.0.0"
+okhttp = "5.3.2"
+gson = "2.13.2"
+coroutines = "1.10.2"
+lifecycle = "2.10.0"
+navigation = "2.9.6"
+compose-ui = "1.9.5"  # ADD THIS
+compose-bom = "2025.11.01"
+activity-compose = "1.12.0"
+material3 = "1.4.0"  # UPDATE THIS
 
 [libraries]
+accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+
+# UPDATE THESE - Add explicit versions
+androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
+androidx-ui-graphics = { module = "androidx.compose.ui:ui-graphics", version.ref = "compose-ui" }
+androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui" }
+androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
+
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -45,4 +58,3 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
